[gd_scene load_steps=13 format=2]

[ext_resource path="res://Seek/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Seek/Values.gd" type="Script" id=3]
[ext_resource path="res://Seek/ForceValue.gd" type="Script" id=4]
[ext_resource path="res://Seek/SpeedValue.gd" type="Script" id=5]
[ext_resource path="res://Seek/AccValue.gd" type="Script" id=6]
[ext_resource path="res://Seek/Automaton.gd" type="Script" id=7]
[ext_resource path="res://Seek/DrawVector.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 320 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 512, 16 )

[node name="Scene" type="Node2D"]

[node name="Automaton" type="KinematicBody2D" parent="."]
position = Vector2( 390, 70 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 7 )
TARGET = NodePath("../Player")

[node name="Sprite" type="Sprite" parent="Automaton"]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="Automaton"]
shape = SubResource( 1 )

[node name="DesiredVelocity" type="Node2D" parent="Automaton"]
script = ExtResource( 8 )
PROPERTY = "desired_velocity"
COLOR = Color( 1, 0, 0, 1 )

[node name="CurrentVelocity" type="Node2D" parent="Automaton"]
script = ExtResource( 8 )
PROPERTY = "current_velocity"
COLOR = Color( 0, 0, 1, 1 )

[node name="SteeringForce" type="Node2D" parent="Automaton"]
script = ExtResource( 8 )
PROPERTY = "steering_force"
COLOR = Color( 0, 1, 0, 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 1210, 570 )
scale = Vector2( 0.5, 0.5 )
collision_mask = 4
script = ExtResource( 1 )
MAX_SPEED = 640.0
ACCELERATION = 0.1

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="Limits" type="Node2D" parent="."]

[node name="LeftLimit" type="StaticBody2D" parent="Limits"]
position = Vector2( 304, 320 )
collision_layer = 4
collision_mask = 3

[node name="Collider" type="CollisionShape2D" parent="Limits/LeftLimit"]
shape = SubResource( 3 )

[node name="RightLimit" type="StaticBody2D" parent="Limits"]
position = Vector2( 1296, 320 )
collision_layer = 4
collision_mask = 3

[node name="Collider" type="CollisionShape2D" parent="Limits/RightLimit"]
shape = SubResource( 3 )

[node name="UpperLimit" type="StaticBody2D" parent="Limits"]
position = Vector2( 800, -16 )
collision_layer = 4
collision_mask = 3

[node name="Collider" type="CollisionShape2D" parent="Limits/UpperLimit"]
shape = SubResource( 4 )

[node name="LowerLimit" type="StaticBody2D" parent="Limits"]
position = Vector2( 800, -16 )
collision_layer = 4
collision_mask = 3

[node name="Collider" type="CollisionShape2D" parent="Limits/LowerLimit"]
position = Vector2( 0, 672 )
shape = SubResource( 4 )

[node name="Control" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_right = 320.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="Label" parent="Control"]
margin_left = 10.0
margin_top = 10.0
margin_right = 130.0
margin_bottom = 58.0
text = "Current velocity:
Desired velocity:
Steering force:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Values" type="Label" parent="Control"]
margin_left = 140.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 24.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
Automaton = NodePath("../../Automaton")
Player = NodePath("../../Player")

[node name="Acceleration" type="HSlider" parent="Control"]
margin_left = 10.0
margin_top = 100.0
margin_right = 310.0
margin_bottom = 116.0
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Acceleration"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = -6.0
text = "Acceleration"

[node name="Value" type="Label" parent="Control/Acceleration"]
margin_left = 260.0
margin_top = -20.0
margin_right = 300.0
margin_bottom = -6.0
grow_horizontal = 0
align = 2
script = ExtResource( 6 )

[node name="MaxSpeed" type="HSlider" parent="Control"]
margin_left = 10.0
margin_top = 160.0
margin_right = 310.0
margin_bottom = 176.0
max_value = 1000.0
step = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MaxSpeed"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = -6.0
text = "Maxium Speed"

[node name="Value" type="Label" parent="Control/MaxSpeed"]
margin_left = 260.0
margin_top = -20.0
margin_right = 300.0
margin_bottom = -6.0
grow_horizontal = 0
align = 2
script = ExtResource( 5 )

[node name="MaxForce" type="HSlider" parent="Control"]
margin_left = 10.0
margin_top = 220.0
margin_right = 310.0
margin_bottom = 236.0
max_value = 1000.0
step = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MaxForce"]
margin_top = -20.0
margin_right = 159.0
margin_bottom = -6.0
text = "Maximum Steering Force"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Control/MaxForce"]
margin_left = 260.0
margin_top = -20.0
margin_right = 300.0
margin_bottom = -6.0
grow_horizontal = 0
align = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Control/Acceleration" to="Control/Acceleration/Value" method="_on_Acceleration_value_changed"]
[connection signal="value_changed" from="Control/Acceleration" to="Automaton" method="_on_Acceleration_value_changed"]
[connection signal="value_changed" from="Control/MaxSpeed" to="Control/MaxSpeed/Value" method="_on_MaxSpeed_value_changed"]
[connection signal="value_changed" from="Control/MaxSpeed" to="Automaton" method="_on_MaxSpeed_value_changed"]
[connection signal="value_changed" from="Control/MaxForce" to="Control/MaxForce/Value" method="_on_MaxForce_value_changed"]
[connection signal="value_changed" from="Control/MaxForce" to="Automaton" method="_on_MaxForce_value_changed"]
